<resources>
    <string name="app_name">MadLevel4Task2v2.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>
    <string name="you">You</string>
    <string name="computer">computer</string>
    <string name="user">user</string>
    <string name="versus">V.S.</string>
    <string name="you_win">You win!</string>
    <string name="sub_statistics">Win: %1$d Draw: %2$d Lose: %3$d</string>
    <string name="statistics">Your all time statistics</string>
    <string name="instructions_subtext">Instructions: select rock, paper or scissors to play.</string>
    <string name="welcome">welcome</string>
    <string name="history">History</string>
    <string name="delete">delete</string>
</resources>